# pnpm-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.safety-check  Makefile  README.md  build.sh  smoke.sh
src/: main.rs
tests/: integration.rs
