[package]
name = "pnpm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
flate2 = "1"
glob = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
urlencoding = "2"
yara = { version = "0.31.0", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
serde_json = "1"
